# spin-demo-apps

./: README.md
spin-go-demo/: Makefile  README.md  go.mod  go.sum  spin.toml
spin-python-demo/: Makefile  README.md  app.py  spin.toml
spin-rust-demo/: Cargo.toml  Makefile  README.md  spin.toml
spin-rust-demo/src/: lib.rs
spin-ts-demo/: Makefile  README.md  package.json  pnpm-lock.yaml  spin.toml
spin-ts-demo/src/: index.ts
