[package]
name = "spin-rust-demo"
authors = ["Huynh Duc Dung <dunghd.it@gmail.com>"]
description = "Simple Rust App"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "=1.0.100"
# Crate to simplify working with bytes.
bytes = "=1.11.0"
# General-purpose crate with common HTTP types.
http = "=1.4.0"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.1" }
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "822fdb1ae6279933be9f0a6b18901adf9997398d" }

[workspace]