[package]
name = "spin-rust-demo"
authors = ["Huynh Duc Dung <dunghd.it@gmail.com>"]
description = "Simple Rust App"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "=1.0.79"
# Crate to simplify working with bytes.
bytes = "=1.11.1"
# General-purpose crate with common HTTP types.
http = "=1.0.0"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.0.0" }
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "7544b8037fc72eea16c5f777eb1a2dc29f75ab7c" }

[workspace]